<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10pt"
        android:paddingRight="10pt"
        android:paddingTop="10pt"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.38"
            android:src="@drawable/logo_original_slogan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/view14"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingLeft="10pt"
        android:paddingRight="10pt" >
    </LinearLayout>

    <EditText
        android:id="@+id/editUser"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/DigUsu" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPass"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/DigSen"
        android:inputType="textPassword" />
    
    <LinearLayout
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="10pt"
        android:paddingRight="10pt" >


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/texto9"
            android:background="@drawable/layoutbutton"
            android:text="@string/bntEntrar"
            android:layout_marginTop="10dp"
            android:onClick="entrar"
            android:textColor="@color/branco" />
        <Button
            android:id="@+id/bntSair"
            style="@style/texto9"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:onClick="sair"
            android:layout_marginTop="15dp"
            android:text="@string/bntSair"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
             android:autoLink="all"
            android:gravity="center_horizontal"
            android:onClick="cadastrar"
             android:linksClickable="true"
            android:text="@string/site"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="all"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:onClick="esquecisenha"
            android:text="@string/site2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />
    </LinearLayout>

</LinearLayout>